unpackaged/main/default/objects/Healthcheck_Instance__c/Healthcheck_Instance__c.object-meta.xml
<CustomObject>
    <label>Healthcheck Instance</label>
    <nameField>
        <label>Healthcheck Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Healthcheck Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>