unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Healthcheck Instances</relationshipLabel>
    <relationshipName>Healthcheck_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>