unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Healthcheck Instances</relationshipLabel>
    <relationshipName>Healthcheck_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>