unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Healthcheck Instances</relationshipLabel>
    <relationshipName>Healthcheck_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>