unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Contract_Sent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sent__c</fullName>
    <label>Contract Sent</label>
    <type>DateTime</type>
</CustomField>