unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <label>Contract Signed</label>
    <type>DateTime</type>
</CustomField>