unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Healthcheck Instances</relationshipLabel>
    <relationshipName>Healthcheck_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>