unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 2</label>
    <referenceTo>c2g__codaDimension2__c</referenceTo>
    <relationshipLabel>Healthcheck Instances</relationshipLabel>
    <relationshipName>Healthcheck_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>