unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Healthcheck_Instance_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Healthcheck_Instance_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Healthcheck Instance ID (18)</label>
    <type>Text</type>
</CustomField>