unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Healthcheck_Store__c.field-meta.xml
<CustomField>
    <fullName>Healthcheck_Store__c</fullName>
    <label>Healthcheck Store</label>
    <referenceTo>Healthcheck_Store__c</referenceTo>
    <relationshipLabel>Healthcheck Instances</relationshipLabel>
    <relationshipName>Healthcheck_Instances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>