unpackaged/main/default/objects/Healthcheck_Instance__c/fields/Winmaster_Reference__c.field-meta.xml
<CustomField>
    <fullName>Winmaster_Reference__c</fullName>
    <inlineHelpText>Group &amp; Member number, with the following format: ####-##</inlineHelpText>
    <label>Winmaster Reference</label>
    <length>7</length>
    <type>Text</type>
</CustomField>