unpackaged/main/default/objects/Healthcheck_Instance__c/fields/X20_Groups__c.field-meta.xml
<CustomField>
    <fullName>X20_Groups__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Groups</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>Healthcheck Instances</relationshipLabel>
    <relationshipName>Healthcheck_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>