unpackaged/main/default/objects/Healthcheck_Instance__c/fields/X20_Groups_Member__c.field-meta.xml
<CustomField>
    <fullName>X20_Groups_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Groups Member</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipLabel>Healthcheck Instances</relationshipLabel>
    <relationshipName>Healthcheck_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>