unpackaged/main/default/objects/Healthcheck_Instance__c/recordTypes/Healthcheck.recordType-meta.xml
<RecordType>
    <fullName>Healthcheck</fullName>
    <active>true</active>
    <label>Healthcheck</label>
</RecordType>