unpackaged/main/default/objects/Healthcheck_Instance__c/listViews/DHG_HC_Instances.listView-meta.xml
<ListView>
    <fullName>DHG_HC_Instances</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Winmaster_Reference__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>DHG</value>
    </filters>
    <label>DHG HC Instances</label>
</ListView>